--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,45 +5,62 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:background="@color/main_green"
-        android:paddingTop="16dp"
-        android:text="@string/welcome_screen_header"
-        android:textAlignment="center"
-        android:textColor="@color/base_button_text_color_selector"
-        android:textSize="35dp" />
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.9"
-        android:src="@drawable/welcome_image" />
-
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_weight="0.05">
+        android:layout_weight="0.95">
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
         <ImageView
-            android:layout_width="0dp"
-            android:layout_height="64dp"
-            android:layout_marginBottom="16dp"
-            android:layout_weight="0.2"
-            android:src="@drawable/ic_clover_os" />
+            android:id="@+id/welcome"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/clover_welcome"
+            android:scaleType="centerCrop"/>
 
-        <Button
-            android:id="@+id/order_button"
-            style="@style/Button"
-            android:layout_width="0dp"
+        <ImageView
+            android:layout_width="72dp"
+            android:layout_height="72dp"
+            android:layout_alignTop="@+id/welcome"
+            android:layout_alignRight="@+id/welcome"
+            android:src="@drawable/ic_clover_os"
+            android:layout_margin="16dp"
+            android:tint="@color/white"/>
+
+        <TextView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginRight="48dp"
-            android:layout_marginBottom="16dp"
-            android:layout_weight="0.8"
-            android:gravity="center"
-            android:text="@string/welcome_button" />
+            android:text="@string/welcome_screen_header"
+            android:textColor="@color/white"
+            android:textSize="96dp"
+            android:layout_centerInParent="true"
+            android:layout_marginLeft="32dp"/>
+
+        <ImageView
+            android:layout_width="72dp"
+            android:layout_height="72dp"
+            android:layout_alignBottom="@+id/welcome"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="16dp"
+            android:src="@drawable/ic_microphone"
+            android:layout_margin="32dp"
+            android:tint="@color/black_80"/>
+
+    </RelativeLayout>>
+
     </LinearLayout>
+
+
+    <Button
+        android:id="@+id/order_button"
+        style="@style/MainButton"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.05"
+        android:text="@string/welcome_button"
+        android:textSize="36dp"/>
 
 </LinearLayout>
