--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -39,6 +39,11 @@
         <item name="android:layout_marginRight">@dimen/base_button_horizontal_margin</item>
     </style>
 
+    <style name="MainButton" parent="BaseButton.Small.Green">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_weight">1</item>
+    </style>
+
 
 
 </resources>
